--- a/13-Advanced DOM and Events [PROJECT]/index.html
+++ b/13-Advanced DOM and Events [PROJECT]/index.html
@@ -45,7 +45,7 @@
       </nav>
 
       <div class="header__title">
-        <!-- <h1 onclick="alert('HTML alert')"> -->
+        <!-- <h1 onclick="alert('HTML alert')"> Old code не се използва -->
         <h1>
           When
           <!-- Green highlight effect -->
